2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h, startup/bspstart.c: Move interrupt_stack_size field
	from CPU Table to Configuration Table. Eliminate CPU Table from all
	ports. Delete references to CPU Table in all forms.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Moved most of the remaining CPU Table fields to
	the Configuration Table. This included pretasking_hook,
	predriver_hook, postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart.c: removed bsp_exceptions_in_RAM

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq.h, irq/irq_init.c: Removed the definition
	of ASM_IRQ_VECTOR_BASE; this symbol was only use to
	initialize the irqBase member of the rtems_irq_global_settings
	struct. However, irqBase is an rtems_irq_symbolic_name,
	so using BSP_LOWEST_OFFSET is more appropriate.

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Now compiles and links.

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Eliminate PowerPC specific elements from the CPU
	Table. They have been replaced with variables named bsp_XXX as
	needed.

2007-11-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* aclocal.m4: Removed. Is automatically generated by bootstrap.

2007-10-02	Jukka Pietarinen <jukka.pietarinen@mrf.fi>

	* startup/linkcmds: Move definition of _end so memory is not corrupted.

2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* irq/irq_init.c: Code outside of cpukit should use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and