@@ -112,7 +112,7 @@ int C_dispatch_irq_handler (CPU_Interrupt_frame *frame, unsigned int excNum)
   case ASM_EXT_VECTOR:
     BSP_irq_handle_at_opbintc();
     break;
-  case ASM_BOOKE_PIT_VECTOR:
+  case ASM_BOOKE_DEC_VECTOR:
     BSP_rtems_irq_tbl[BSP_PIT].hdl
       (BSP_rtems_irq_tbl[BSP_PIT].handle);    
     break;
@@ -338,8 +338,8 @@ static rtems_raw_except_connect_data BSP_vec_desc[] = {
    exception_nop_enable,
    exception_always_enabled
   },
-  {ASM_BOOKE_PIT_VECTOR,
-   {ASM_BOOKE_PIT_VECTOR,
+  {ASM_BOOKE_DEC_VECTOR,
+   {ASM_BOOKE_DEC_VECTOR,
     pit_exception_vector_prolog_code,
     (size_t)&pit_exception_vector_prolog_code_size
    },
