@@ -1,3 +1,9 @@
+2007-12-10	Till Straumann <strauman@slac.stanford.edu>
+
+	* irq/irq_init.c:
+	renamed ASM_BOOKE_PIT_VECTOR to ASM_BOOKE_DEC_VECTOR
+	to be closer to 'official' nomenclature.
+
 2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* include/bsp.h, startup/bspstart.c: Move interrupt_stack_size field
